--- a/app/src/main/res/layout/activity_shipment_detail.xml
+++ b/app/src/main/res/layout/activity_shipment_detail.xml
@@ -265,7 +265,7 @@
                 android:gravity="center"
                 android:text="  # "
                 android:textAllCaps="true"
-                android:textColor="@color/color_181818" />
+                android:textColor="@color/secondary_text_color" />
 
             <!-- Divider -->
             <View
@@ -283,8 +283,7 @@
                 android:gravity="center"
                 android:letterSpacing="-0.01"
                 android:text="@string/item_name_type"
-                android:textAppearance="@style/inter_400_10_16"
-                android:textColor="@color/color_181818" />
+                android:textColor="@color/secondary_text_color" />
 
             <!-- Divider -->
             <View
@@ -312,8 +311,7 @@
                     android:letterSpacing="-0.01"
                     android:text="REQ"
                     android:textAllCaps="true"
-                    android:textAppearance="@style/inter_400_10_16"
-                    android:textColor="@color/color_181818" />
+                    android:textColor="@color/secondary_text_color" />
 
                 <View
                     android:visibility="invisible"
@@ -331,8 +329,7 @@
                     android:letterSpacing="-0.01"
                     android:text="FOUND"
                     android:textAllCaps="true"
-                    android:textAppearance="@style/inter_400_10_16"
-                    android:textColor="@color/color_181818" />
+                    android:textColor="@color/secondary_text_color" />
             </LinearLayout>
         </androidx.appcompat.widget.LinearLayoutCompat>
         <androidx.recyclerview.widget.RecyclerView
