--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -265,7 +265,7 @@
                 android:gravity="center"
                 android:text="  # "
                 android:textAllCaps="true"
-                android:textColor="@color/black" />
+                android:textColor="@color/secondary_text_color" />
 
             <!-- Divider -->
             <View
@@ -284,7 +284,7 @@
                 android:letterSpacing="-0.01"
                 android:text="@string/item_name_type"
                 android:textAppearance="@style/inter_400_10_16"
-                android:textColor="@color/black" />
+                android:textColor="@color/secondary_text_color" />
 
             <!-- Divider -->
             <View
@@ -312,7 +312,7 @@
                     android:text="TOT"
                     android:textAllCaps="true"
                     android:textAppearance="@style/inter_400_10_16"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/secondary_text_color" />
 
                 <View
                     android:visibility="invisible"
@@ -331,7 +331,7 @@
                     android:text="SHPD"
                     android:textAllCaps="true"
                     android:textAppearance="@style/inter_400_10_16"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/secondary_text_color" />
 
                 <View
                     android:visibility="invisible"
@@ -350,7 +350,7 @@
                     android:text="ADD"
                     android:textAllCaps="true"
                     android:textAppearance="@style/inter_400_10_16"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/secondary_text_color" />
 
                 <View
                     android:visibility="invisible"
@@ -369,7 +369,7 @@
                     android:text="BAL"
                     android:textAllCaps="true"
                     android:textAppearance="@style/inter_400_10_16"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/secondary_text_color" />
             </LinearLayout>
         </androidx.appcompat.widget.LinearLayoutCompat>
         <androidx.recyclerview.widget.RecyclerView
