--- a/app/src/main/res/layout/activity_prepare_shipment_1.xml
+++ b/app/src/main/res/layout/activity_prepare_shipment_1.xml
@@ -46,6 +46,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                        android:textSize="@dimen/_11ssp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -55,6 +56,7 @@
 
 
                         <TextView
+                        android:textSize="@dimen/_11ssp"
                             android:id="@+id/txtShipmentId"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -71,6 +73,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                        android:textSize="@dimen/_11ssp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -80,6 +83,7 @@
                             android:textColor="@color/secondary_text_color" />
 
                         <TextView
+                        android:textSize="@dimen/_11ssp"
                             android:id="@+id/shipmentDate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -113,6 +117,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                        android:textSize="@dimen/_11ssp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -122,6 +127,7 @@
 
 
                         <TextView
+                        android:textSize="@dimen/_11ssp"
                             android:id="@+id/carrierName"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -154,6 +160,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                        android:textSize="@dimen/_11ssp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -209,6 +216,7 @@
 
                 <!-- Column # -->
                 <TextView
+                        android:textSize="@dimen/_11ssp"
                     android:layout_width="@dimen/_20sdp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/padding_inside_table_field"
@@ -229,6 +237,7 @@
 
                 <!-- Column ITEM NAME - TYPE -->
                 <TextView
+                        android:textSize="@dimen/_11ssp"
                     android:layout_width="@dimen/_80sdp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -256,6 +265,7 @@
 
                     <!-- Loop through these TextViews dynamically if required -->
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -275,6 +285,7 @@
                         android:background="@color/bg_stroke_color" />
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -294,6 +305,7 @@
                         android:background="@color/bg_stroke_color" />
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -313,6 +325,7 @@
                         android:background="@color/bg_stroke_color" />
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
