--- a/app/src/main/res/layout/activity_shipment_detail.xml
+++ b/app/src/main/res/layout/activity_shipment_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -43,6 +42,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -52,6 +52,7 @@
 
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:id="@+id/shipmentId"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -68,6 +69,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -77,6 +79,7 @@
                         android:textColor="@color/secondary_text_color" />
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:id="@+id/shipmentDate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -110,6 +113,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -119,6 +123,7 @@
 
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:id="@+id/customerName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -152,6 +157,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -161,6 +167,7 @@
 
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:id="@+id/carrierName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -193,6 +200,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -202,6 +210,7 @@
 
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:id="@+id/driverName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -218,6 +227,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -227,6 +237,7 @@
                         android:textColor="@color/secondary_text_color" />
 
                     <TextView
+                        android:textSize="@dimen/_11ssp"
                         android:id="@+id/pickupDate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -255,6 +266,7 @@
 
             <!-- Column # -->
             <TextView
+                android:textSize="@dimen/_11ssp"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/padding_inside_table_field"
@@ -275,6 +287,7 @@
 
             <!-- Column ITEM NAME - TYPE -->
             <TextView
+                android:textSize="@dimen/_11ssp"
                 android:layout_width="@dimen/_120sdp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -302,6 +315,7 @@
 
 
                 <TextView
+                    android:textSize="@dimen/_11ssp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -320,6 +334,7 @@
                     android:background="@color/bg_stroke_color" />
 
                 <TextView
+                    android:textSize="@dimen/_11ssp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
