--- a/app/src/main/res/layout/item_order_shipment.xml
+++ b/app/src/main/res/layout/item_order_shipment.xml
@@ -14,6 +14,7 @@
 
         <!-- Column # -->
         <TextView
+                        android:textSize="@dimen/_11ssp"
             android:id="@+id/srNo"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="wrap_content"
@@ -39,6 +40,7 @@
 
         <!-- Column ITEM NAME - TYPE -->
         <TextView
+                        android:textSize="@dimen/_11ssp"
             android:id="@+id/itemName"
             android:layout_width="@dimen/_80sdp"
             android:layout_height="wrap_content"
@@ -66,6 +68,7 @@
             android:orientation="horizontal">
 
             <TextView
+                        android:textSize="@dimen/_11ssp"
                 android:id="@+id/txtTotal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -86,6 +89,7 @@
                 android:background="@color/bg_stroke_color" />
 
             <TextView
+                        android:textSize="@dimen/_11ssp"
                 android:id="@+id/txtShipped"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -106,6 +110,7 @@
                 android:background="@color/bg_stroke_color" />
 
             <TextView
+                        android:textSize="@dimen/_11ssp"
                 android:id="@+id/txtAdd"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -126,6 +131,7 @@
                 android:background="@color/bg_stroke_color" />
 
             <TextView
+                        android:textSize="@dimen/_11ssp"
                 android:id="@+id/txtBalance"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
