--- a/app/src/main/res/layout/item_shipment_count.xml
+++ b/app/src/main/res/layout/item_shipment_count.xml
@@ -12,6 +12,7 @@
 
         <!-- Column # -->
         <TextView
+            android:textSize="@dimen/_11ssp"
             android:id="@+id/srNo"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="wrap_content"
@@ -37,6 +38,7 @@
 
         <!-- Column ITEM NAME - TYPE -->
         <TextView
+            android:textSize="@dimen/_11ssp"
             android:id="@+id/itemName"
             android:layout_width="@dimen/_120sdp"
             android:layout_height="wrap_content"
@@ -64,6 +66,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:textSize="@dimen/_11ssp"
                 android:id="@+id/txtRequired"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -84,6 +87,7 @@
                 android:background="@color/bg_stroke_color" />
 
             <TextView
+                android:textSize="@dimen/_11ssp"
                 android:id="@+id/txtFound"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
