--- a/app/src/main/res/layout/fragment_inventory_items.xml
+++ b/app/src/main/res/layout/fragment_inventory_items.xml
@@ -168,6 +168,7 @@
 
 
                 <TextView
+                    android:visibility="gone"
                     android:id="@+id/save"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
