--- a/app/src/main/res/layout/activity_prepare_shipment_1.xml
+++ b/app/src/main/res/layout/activity_prepare_shipment_1.xml
@@ -199,7 +199,7 @@
                 android:gravity="center_vertical|center"
                 android:letterSpacing="-0.02"
                 android:paddingVertical="@dimen/_5sdp"
-                android:text="Add Orders To Shipment"
+                android:text="Add more orders to shipment"
                 android:textAppearance="@style/inter_400_12_16"
                 android:textColor="@color/white" />
 
