--- a/app/src/main/res/layout/fragment_add_inspection.xml
+++ b/app/src/main/res/layout/fragment_add_inspection.xml
@@ -91,14 +91,30 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <TextView
+                    <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="16dp"
-                        android:text="Observation"
-                        android:textAppearance="@style/inter_400_10_10"
-                        android:letterSpacing="-0.02"
-                        android:textColor="@color/color_121212" />
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="16dp"
+                            android:text="Observation"
+                            android:layout_weight="1"
+                            android:textAppearance="@style/inter_400_10_10"
+                            android:letterSpacing="-0.02"
+                            android:textColor="@color/color_121212" />
+
+                        <TextView
+                            android:id="@+id/status"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="16dp"
+                            android:textAppearance="@style/inter_400_10_10"
+                            android:letterSpacing="-0.02"
+                            android:textColor="@color/color_121212" />
+
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
                     <LinearLayout
                         android:layout_width="match_parent"
