--- a/app/src/main/res/layout/fragment_inventory_items.xml
+++ b/app/src/main/res/layout/fragment_inventory_items.xml
@@ -175,6 +175,7 @@
                     android:background="@drawable/button_background"
                     android:backgroundTint="@color/black"
                     android:clickable="true"
+                    android:enabled="false"
                     android:focusable="true"
                     android:foreground="?android:attr/selectableItemBackgroundBorderless"
                     android:gravity="center_vertical|center"
@@ -192,6 +193,7 @@
                     android:backgroundTint="@color/black"
                     android:clickable="true"
                     android:focusable="true"
+                    android:enabled="false"
                     android:foreground="?android:attr/selectableItemBackgroundBorderless"
                     android:gravity="center_vertical|center"
                     android:letterSpacing="-0.02"
