--- a/app/src/main/res/layout/activity_shipment_detail.xml
+++ b/app/src/main/res/layout/activity_shipment_detail.xml
@@ -312,9 +312,8 @@
                 android:layout_weight="4"
                 android:orientation="horizontal">
 
-
-
                 <TextView
+                    android:id="@+id/tvReq"
                     android:textSize="@dimen/_11ssp"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
