--- a/app/src/main/res/layout/item_shipment.xml
+++ b/app/src/main/res/layout/item_shipment.xml
@@ -33,7 +33,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/inter_regular"
-                    android:text="Shipped by:"
+                    android:text="Shipment id:"
                     android:textColor="@color/black" />
 
 
