--- a/app/src/main/res/layout/fragment_inventory_items.xml
+++ b/app/src/main/res/layout/fragment_inventory_items.xml
@@ -207,6 +207,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/errorText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
